# stg

./: .dockerignore  .env.production.expanded.1144821  .env.production.expanded.1232229  .gitignore  .nextest.toml  CICD_WORKFLOW.md  Cargo.toml  DEBUG_BREAKPOINTS_FIX.md  DEPLOY_TO_PRODUCTION.md  DOCKER_WASM_FIX.md  HYBRID_DEBUG_QUICK_START.md  HYBRID_DEV_QUICK_START.md  Justfile  LOCALE_FIX.md  Makefile.toml  PRODUCTION_DIRECTORY.md  PROJECT_IMPROVEMENTS.md  README.md  README_QUICK_START.md  README_WORKFLOW.md  TESTING_QUICK_START.md  TEST_AND_DEPLOY.md  TEST_COVERAGE.md  package.json  playwright.config.ts  test_analytics.sh  tsconfig.json
backend/: .nextest.toml  Cargo.toml  Dockerfile.backend  env.example  run.sh
backend/src/: analytics_tests.rs  auth.rs  auth_tests.rs  cache.rs  cache_tests.rs  config.rs  config_tests.rs  contest.rs  contest_tests.rs  error.rs  error_tests.rs  game.rs  game_controller_tests.rs  game_tests.rs  game_venue_history_tests.rs  health.rs  lib.rs  main.rs  metrics.rs  middleware.rs  normalization_tests.rs  openapi.rs  player.rs  player_tests.rs  ratings_tests.rs  tests.rs  third_party.rs  utility_tests.rs  venue.rs  visualization_tests.rs
backend/src/analytics/: cache.rs  controller.rs  engine.rs  engine_tests.rs  repository.rs  usecase.rs  usecase_tests.rs  visualization.rs
backend/src/client_analytics/: controller.rs  repository.rs  usecase.rs
backend/src/contest/: contest.rs  controller.rs  controller_tests.rs  name_generator.rs  repository.rs
backend/src/game/: controller.rs  repository.rs  usecase.rs
backend/src/migration/: timezone_migration.rs  timezone_migration_tests.rs
backend/src/player/: controller.rs  controller_tests.rs  error.rs  repository.rs  session.rs  usecase.rs
backend/src/ratings/: controller.rs  glicko.rs  glicko_test.rs  repository.rs  scheduler.rs  scheduler_tests.rs  usecase.rs  usecase_tests.rs
backend/src/timezone/: controller.rs  controller_tests.rs
backend/src/venue/: README.md  controller.rs  controller_tests.rs  repository.rs  usecase.rs
backend/tests/: cache_integration_test.rs  contest_search_integration_test.rs  database_integration_test.rs  db_search_integration_test.rs  ratings_integration_test.rs  repository_cache_test.rs  venue_update_integration_test.rs
dataload/: Cargo.toml  README.md
dataload/src/: db.rs  main.rs  models.rs
frontend/: Cargo.toml  Dockerfile.frontend  Dockerfile.frontend.caddy  Dockerfile.frontend.clean  Dockerfile.frontend.simple  Trunk.toml  index.html  package.json  run_frontend.sh  run_prod_frontend.sh  tailwind.config.js
frontend/public/: flatpickr.js  manifest.json  styles.css
frontend/src/: api.rs  auth.rs  config.rs  flatpickr.rs  lib.rs  styles.css  tests.rs  version.rs
frontend/src/analytics/: client_manager.rs  client_manager_test.rs  events.rs
frontend/src/api/: auth.rs  cache.rs  cache_test.rs  contests.rs  games.rs  players.rs  timezone.rs  utils.rs  venues.rs  version.rs
frontend/src/components/: chart_renderer.rs  common.rs  common_modal.rs  common_toast.rs  contests_modal.rs  footer.rs  mod.rs  nav.rs  profile.rs  profile_editor.rs  scheduler_monitor.rs  smart_clickable.rs  version_display.rs
frontend/src/js/: timezone.js
frontend/src/pages/: admin.rs  admin_test.rs  analytics.rs  analytics_dashboard.rs  analytics_test.rs  contest.rs  contest_details.rs  contests.rs  game_details.rs  game_history.rs  games.rs  home.rs  leaderboards.rs  login.rs  not_found.rs  player_profile.rs  profile.rs  venue_details.rs  venue_history.rs  venues.rs
frontend/src/styles/: analytics.css  analytics_dashboard.css  main.css  profile.css
frontend/tests/: component_tests.rs  contest_filters_e2e.rs
migrations/: Cargo.toml  README.md  run-migrations.sh
migrations/files/: 20250115T000000_add_admin_field_to_players.aql  20250115T120000_reset_glicko2_historical.aql  20250820T134000_initialize_player_ratings.aql  20250820T136000_add_ratings_collections.json  20250820T137000_add_ratings_indexes.json
migrations/manual/contest_creator/: README_contest_creator_migration.md  add_creator_tracking_to_existing_contests.aql  complete_contest_creator_migration.aql  migrate_contest_creator_tracking.aql  verify_contest_creator_migration.aql
migrations/notes/: convert_time_date.txt
migrations/scripts/: clear-lock.aql  clear-lock.sh
migrations/src/: main.rs  place_id_migration.rs
scripts/: Cargo.toml  ENV_USAGE.md  PLACE_ID_MIGRATION_README.md  README.md  REMOVED_SCRIPTS.md  backup-prod-db.sh  build-e2e-images.sh  build-info.sh  build-prod-images.sh  build-prod.sh  build-push-only.sh  build-test-push.sh  build.sh  check-deployed-version.sh  check-dev-setup.sh  check-env-prod.sh  check-prod-services.sh  check-production-deployment.sh  check-redis-cache.sh  check-venue-place-ids.aql  check-version-api.sh  clean-docker-for-build.sh  cleanup-docs.sh  cleanup-unused.sh  coverage.sh  create-test-snapshot.sh  deploy-prod-version.sh  deploy-prod.sh  deploy-production.sh  deploy-tested-images.sh  deploy-with-migrations.sh  deploy.sh  export-tested-images.sh  export_prod_data.rs  find-null-place-ids.aql  generate-test-summary.sh  load-e2e-data.sh  load-e2e-env.sh  load-env.sh  load-prod-data.sh  (+37 more)
shared/: Cargo.toml
shared/src/: error.rs  lib.rs  timezone.rs  timezone_cache.rs
shared/src/dto/: analytics.rs  auth.rs  client_sync.rs  common.rs  contest.rs  game.rs  outcome.rs  player.rs  ratings.rs  (+2 more)
testing/: .nextest.toml  Cargo.toml  INTEGRATION_TEST_GUIDE.md  README.md
testing/e2e/: analytics.spec.ts  auth.spec.ts  crud.spec.ts  error_handling.spec.ts  example.spec.ts  navigation.spec.ts
testing/src/: app_setup.rs  lib.rs
testing/tests/: api_tests.rs  auth_flows_e2e.rs  auth_integration_tests.rs  contest_api_tests.rs  contest_filters_e2e.rs  contest_integration_tests.rs  crud_operations_e2e.rs  error_handling_tests.rs  game_api_tests.rs  game_integration_tests.rs  game_search_e2e.rs  integration_test.rs  performance_tests.rs  player_search_e2e.rs  search_integration_tests.rs  test_helpers.rs  venue_api_tests.rs  venue_integration_tests.rs  venue_search_e2e.rs
(+111 files in other folders)
