[workspace]
members = [
    "frontend",
    "backend",
    "shared",
    "dataload",
    "testing",
    "migrations",
    "scripts"
]
resolver = "2"

[workspace.package]
version = "0.2.11"
edition = "2021"
authors = ["The Bogie <thebogie@example.com>"]
description = "A gaming platform for tournaments and competitions"
license = "MIT"
repository = "https://github.com/thebogie/stg_rd"
documentation = "https://docs.rs/stg_rd"
readme = "README.md"
keywords = ["gaming", "tournaments", "competitions", "web", "wasm"]
categories = ["web-programming", "games", "web-assembly"]

[workspace.dependencies]
# Common dependencies
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
chrono = { version = "0.4.34", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
log = "0.4.20"
anyhow = "1.0.79"
thiserror = "1.0.56"
validator = { version = "0.16.1", features = ["derive"] }
base64 = "0.21.7"
urlencoding = "2.1.3"

# Testing dependencies
proptest = "1.4.0"
mockall = "0.12.1"
tokio-test = "0.4.3"
test-log = "0.2.11"
pretty_assertions = "1.4.0"
insta = "1.38.0"
fake = "2.9.0"
rstest = "0.18.2"
test-case = "3.3.1"
criterion = "0.5.1"
tarpaulin = "0.18.5"
# Testcontainers for integration testing
testcontainers = "0.26.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true
codegen-units = 16
debug-assertions = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = false
debug-assertions = false
