[package]
name = "backend"
version = "0.2.1"
edition = "2021"

# Explicitly define the binary (even though main.rs exists, this ensures it's built)
[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4.4"
actix-web-actors = "4.2"
actix = "0.13"
actix-cors = "0.7"

actix-rt = "2.9"
actix-files = "0.6"
actix-ws = "0.2"

# Database
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
tokio = { version = "1.36", features = ["full", "sync"] }
arangors = "0.6"
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }

# Authentication and security
jsonwebtoken = "9.2.0"
bcrypt = "0.15"
rand = "0.8"

time = "0.3"
argon2 = "0.5.2"

# HTTP client and XML parsing
reqwest = { version = "0.11", features = ["json"] }
roxmltree = "0.18"
serde_urlencoded = "0.7"
url = "2.5"

# Async utilities
futures = "0.3"
futures-util = "0.3"

# Serialization and validation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
uuid = { version = "1.7", features = ["v4", "serde"] }
validator = { version = "0.16", features = ["derive"] }

# Logging and error handling
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
# Utilities
base64 = { workspace = true }
urlencoding = "2.1"
dotenv = "0.15"
derive_more = "0.99"
async-trait = "0.1"
approx = "0.5"

# Internal dependencies
shared = { path = "../shared" }
random_word = "0.3"
fastrand = "2.3.0"

# OpenAPI/Swagger documentation
utoipa = { version = "4.2", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
test-log = "0.2"
pretty_assertions = "1.4"
insta = { workspace = true }
fake = "2.9"
rstest = "0.18"
test-case = "3.3"
proptest = "1.4"
testing = { path = "../testing" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
debug = true

[profile.test]

[profile.bench]
