[package]
name = "dataload"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
arangors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
dotenv = "0.15"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
shared = { path = "../shared" }
random_word = { version = "0.5.0", features = ["en"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
futures = "0.3"
argon2 = "0.5" 