[package]
name = "frontend"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Web frontend for the gaming platform"
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["csr"]
csr = ["yew/csr"]
hydration = ["yew/hydration"]
ssr = ["yew/ssr"]
frontend = ["csr"]

[dependencies]
# Framework
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

# Web APIs and utilities
gloo = "0.11.0"
gloo-net = "0.5"
gloo-console = "0.3.0"
gloo-storage = "0.3.0"
gloo-timers = "0.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3", features = [
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Event",
    "EventTarget",
    "InputEvent",
    "SubmitEvent",
    "Element",
    "Node",
    "Window",
    "Document",
    "console",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers"
] }
js-sys = "0.3.69"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.34", features = ["serde", "wasmbind"] }
chrono-tz = "0.8"
uuid = { version = "1.7.0", features = ["v4", "serde", "js"] }

# Caching and utilities
lazy_static = "1.4"
lru = "0.12"

# Logging and error handling
wasm-logger = "0.2"
log = "0.4"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"

# Internal dependencies
shared = { path = "../shared" }

# Added dependency
anyhow = "1.0"

# New dependencies
yew-agent = "0.2"
gloo-utils = "0.2"
leptos = { version = "0.5", features = ["csr"] }
leptos_meta = { version = "0.5", features = ["csr"] }
leptos_router = { version = "0.5", features = ["csr"] }
validator = { version = "0.16", features = ["derive"] }

# Added dependency
regex = "1"
urlencoding = "2.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.45"
actix-web = "4.4"
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.12", features = ["js"] }