[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
arangors = "0.6"
clap = { version = "4.0", features = ["derive", "env"] }
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
flate2 = "1.0"
fake = "2.9"
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "place_id_migration"
path = "place_id_migration.rs"

[[bin]]
name = "migrate-place-ids"
path = "migrate-place-ids.rs"

[[bin]]
name = "export_prod_data"
path = "export_prod_data.rs"

[[bin]]
name = "sanitize_data"
path = "sanitize_data.rs"
