[package]
name = "shared"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Shared types and utilities for the gaming platform"
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true } 
categories = { workspace = true }

[dependencies]
# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
# Async traits
async-trait = "0.1"
# Logging and error handling
log = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Regex and lazy static for validation
lazy_static = "1.4"
regex = "1.10"
once_cell = "1.19"

# Added from the code block
argon2 = "0.5.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
actix-web = "4.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
pretty_assertions = "1.4"
test-log = "0.2"
fake = "2.9"
rstest = "0.18"
proptest = "1.4"
test-case = "3.3"
insta = "1.38"
env_logger = "0.11" 