[package]
name = "testing"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Integration testing infrastructure with testcontainers"
license = { workspace = true }

[dependencies]
# Testcontainers
testcontainers = { workspace = true }

# Async runtime
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"

# Database clients
arangors = "0.6"
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/time
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log = { workspace = true }
env_logger = "0.10"

# Web framework for testing
actix-web = "4.4"
actix-rt = "2.9"

# HTTP client for API tests
reqwest = { version = "0.11", features = ["json"] }

# Base64 encoding for HTTP auth
base64 = "0.21"

# Internal dependencies
shared = { path = "../shared" }
backend = { path = "../backend" }

[dev-dependencies]
rstest = { workspace = true }
pretty_assertions = { workspace = true }
test-log = { workspace = true }

